Succeed: Free Camera

--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -180,16 +180,21 @@
     <ClCompile Include="..\Codes\AnimationCtrl.cpp" />
     <ClCompile Include="..\Codes\Base.cpp" />
     <ClCompile Include="..\Codes\BlockObj.cpp" />
+    <ClCompile Include="..\Codes\Camera.cpp" />
+    <ClCompile Include="..\Codes\CameraController.cpp" />
     <ClCompile Include="..\Codes\ComponentManager_Object.cpp" />
     <ClCompile Include="..\Codes\Component_Object.cpp" />
     <ClCompile Include="..\Codes\CreativeMode.cpp" />
     <ClCompile Include="..\Codes\DynamicMesh_Object.cpp" />
     <ClCompile Include="..\Codes\Frame.cpp" />
     <ClCompile Include="..\Codes\FrameManager.cpp" />
+    <ClCompile Include="..\Codes\FreeCamera.cpp" />
     <ClCompile Include="..\Codes\GameMode.cpp" />
     <ClCompile Include="..\Codes\GameObject.cpp" />
     <ClCompile Include="..\Codes\GraphicDevice.cpp" />
     <ClCompile Include="..\Codes\HierarchyLoader.cpp" />
+    <ClCompile Include="..\Codes\InputDevice.cpp" />
+    <ClCompile Include="..\Codes\KeyManager.cpp" />
     <ClCompile Include="..\Codes\KObject.cpp" />
     <ClCompile Include="..\Codes\MainApp.cpp" />
     <ClCompile Include="..\Codes\PipeLine.cpp" />
@@ -248,6 +253,8 @@
     <ClInclude Include="..\Headers\AnimationCtrl.h" />
     <ClInclude Include="..\Headers\Base.h" />
     <ClInclude Include="..\Headers\BlockObj.h" />
+    <ClInclude Include="..\Headers\Camera.h" />
+    <ClInclude Include="..\Headers\CameraController.h" />
     <ClInclude Include="..\Headers\Client_Defines.h" />
     <ClInclude Include="..\Headers\ComponentManager_Object.h" />
     <ClInclude Include="..\Headers\Component_Object.h" />
@@ -256,12 +263,15 @@
     <ClInclude Include="..\Headers\DynamicMesh_Object.h" />
     <ClInclude Include="..\Headers\Frame.h" />
     <ClInclude Include="..\Headers\FrameManager.h" />
+    <ClInclude Include="..\Headers\FreeCamera.h" />
     <ClInclude Include="..\Headers\Function.h" />
     <ClInclude Include="..\Headers\GameMode.h" />
     <ClInclude Include="..\Headers\GameObject.h" />
     <ClInclude Include="..\Headers\Global.h" />
     <ClInclude Include="..\Headers\GraphicDevice.h" />
     <ClInclude Include="..\Headers\HierarchyLoader.h" />
+    <ClInclude Include="..\Headers\InputDevice.h" />
+    <ClInclude Include="..\Headers\KeyManager.h" />
     <ClInclude Include="..\Headers\Shader.h" />
     <ClInclude Include="..\Headers\WorldController.h" />
     <ClInclude Include="..\Headers\KObject.h" />
