--- a/Client/Default/imgui.ini
+++ b/Client/Default/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=767,12
+Pos=781,45
 Size=510,535
 Collapsed=1
 
@@ -64,8 +64,8 @@ Size=569,109
 Collapsed=0
 
 [Window][Mode Controller]
-Pos=10,10
-Size=345,711
+Pos=3,3
+Size=350,720
 Collapsed=0
 
 [Window][test]
@@ -86,5 +86,10 @@ Collapsed=0
 [Window][Example: Documents]
 Pos=60,60
 Size=621,734
+Collapsed=0
+
+[Window][Camera Controller]
+Pos=379,7
+Size=300,200
 Collapsed=0
 
