--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="..\Codes\KObject.cpp" />
     <ClCompile Include="..\Codes\MainApp.cpp" />
     <ClCompile Include="..\Codes\Mode.cpp" />
+    <ClCompile Include="..\Codes\NaviCell_Object.cpp" />
     <ClCompile Include="..\Codes\NaviMeshData.cpp" />
     <ClCompile Include="..\Codes\PipeLine.cpp" />
     <ClCompile Include="..\Codes\Bot.cpp" />
@@ -219,6 +220,7 @@
     <ClCompile Include="..\External\DearImgui\imgui_impl_win32.cpp" />
     <ClCompile Include="..\External\DearImgui\imgui_widgets.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="NaviMesh_Object.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -273,6 +275,7 @@
     <ClInclude Include="..\Headers\HierarchyLoader.h" />
     <ClInclude Include="..\Headers\InputDevice.h" />
     <ClInclude Include="..\Headers\KeyManager.h" />
+    <ClInclude Include="..\Headers\NaviCell_Object.h" />
     <ClInclude Include="..\Headers\NaviMeshData.h" />
     <ClInclude Include="..\Headers\Shader.h" />
     <ClInclude Include="..\Headers\KObject.h" />
@@ -294,6 +297,7 @@
     <ClInclude Include="..\Headers\World.h" />
     <ClInclude Include="..\Headers\World_Object.h" />
     <ClInclude Include="Client.h" />
+    <ClInclude Include="NaviMesh_Object.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
