--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="..\Codes\SystemManager.cpp" />
     <ClCompile Include="..\Codes\TimeManager.cpp" />
     <ClCompile Include="..\Codes\Timer.cpp" />
+    <ClCompile Include="..\Codes\TransformSystem.cpp" />
     <ClCompile Include="..\Codes\Transform_Object.cpp" />
     <ClCompile Include="..\Codes\ModeController.cpp" />
     <ClCompile Include="..\Codes\World.cpp" />
@@ -307,6 +308,7 @@
     <ClInclude Include="..\Headers\SystemManager.h" />
     <ClInclude Include="..\Headers\TimeManager.h" />
     <ClInclude Include="..\Headers\Timer.h" />
+    <ClInclude Include="..\Headers\TransformSystem.h" />
     <ClInclude Include="..\Headers\Transform_Object.h" />
     <ClInclude Include="..\Headers\Typedef.h" />
     <ClInclude Include="..\Headers\ModeController.h" />
