--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -185,9 +185,10 @@
     <ClCompile Include="..\Codes\Camera.cpp" />
     <ClCompile Include="..\Codes\CameraController.cpp" />
     <ClCompile Include="..\Codes\ComponentManager_Object.cpp" />
+    <ClCompile Include="..\Codes\ComponentSystem.cpp" />
     <ClCompile Include="..\Codes\Component_Object.cpp" />
     <ClCompile Include="..\Codes\CreativeMode.cpp" />
-    <ClCompile Include="..\Codes\DynamicMesh_Object.cpp" />
+    <ClCompile Include="..\Codes\DynamicMeshRenderer_Object.cpp" />
     <ClCompile Include="..\Codes\Entity.cpp" />
     <ClCompile Include="..\Codes\EntityManager.cpp" />
     <ClCompile Include="..\Codes\Frame.cpp" />
@@ -210,9 +211,10 @@
     <ClCompile Include="..\Codes\PlayerCamera.cpp" />
     <ClCompile Include="..\Codes\PlayerIdle.cpp" />
     <ClCompile Include="..\Codes\PlayerRun.cpp" />
+    <ClCompile Include="..\Codes\StaticRendererSystem.cpp" />
     <ClCompile Include="..\Codes\Renderer_Object.cpp" />
     <ClCompile Include="..\Codes\Shader.cpp" />
-    <ClCompile Include="..\Codes\StaticMesh_Object.cpp" />
+    <ClCompile Include="..\Codes\StaticMeshRenderer_Object.cpp" />
     <ClCompile Include="..\Codes\SystemManager.cpp" />
     <ClCompile Include="..\Codes\TimeManager.cpp" />
     <ClCompile Include="..\Codes\Timer.cpp" />
@@ -271,10 +273,11 @@
     <ClInclude Include="..\Headers\CameraTarget.h" />
     <ClInclude Include="..\Headers\Client_Defines.h" />
     <ClInclude Include="..\Headers\ComponentManager_Object.h" />
+    <ClInclude Include="..\Headers\ComponentSystem.h" />
     <ClInclude Include="..\Headers\Component_Object.h" />
     <ClInclude Include="..\Headers\CreativeMode.h" />
     <ClInclude Include="..\Headers\Defines.h" />
-    <ClInclude Include="..\Headers\DynamicMesh_Object.h" />
+    <ClInclude Include="..\Headers\DynamicMeshRenderer_Object.h" />
     <ClInclude Include="..\Headers\Entity.h" />
     <ClInclude Include="..\Headers\EntityManager.h" />
     <ClInclude Include="..\Headers\Frame.h" />
@@ -293,6 +296,7 @@
     <ClInclude Include="..\Headers\PlayerCamera.h" />
     <ClInclude Include="..\Headers\PlayerIdle.h" />
     <ClInclude Include="..\Headers\PlayerRun.h" />
+    <ClInclude Include="..\Headers\StaticRendererSystem.h" />
     <ClInclude Include="..\Headers\Shader.h" />
     <ClInclude Include="..\Headers\KObject.h" />
     <ClInclude Include="..\Headers\Macro.h" />
@@ -303,7 +307,7 @@
     <ClInclude Include="..\Headers\Player.h" />
     <ClInclude Include="..\Headers\Renderer_Object.h" />
     <ClInclude Include="..\Headers\State.h" />
-    <ClInclude Include="..\Headers\StaticMesh_Object.h" />
+    <ClInclude Include="..\Headers\StaticMeshRenderer_Object.h" />
     <ClInclude Include="..\Headers\Struct.h" />
     <ClInclude Include="..\Headers\SystemManager.h" />
     <ClInclude Include="..\Headers\TimeManager.h" />
